--- a/GymSystem/Views/Home/Index.cshtml
+++ b/GymSystem/Views/Home/Index.cshtml
@@ -1,75 +1,5 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-          rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
-    <!-- ^ Bootstrap 5.3.8 css file -->
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <!-- ^ Our main css file -->
-    <link rel="stylesheet" href="~/css/style.css" />
-    <title>Power fitness | Home</title>
-</head>
-
-<body>
-    <header>
-        <!-- ^ navbar -->
-        <nav class="navbar navbar-expand-lg bg-white my-3">
-            <div class="container">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                    <img src="~/images/logo.jpg" alt="" />
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto mb-2 mb-lg-0 mt-3 mt-lg-0">
-                        <li class="nav-item">
-                        <li class="nav-item">
-                            <a class="nav-link active px-3 py-2 mx-2 fw-bolder fs-5" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  px-3 py-2 mx-2 fw-bolder fs-5" aria-current="page" href="#">Members</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  px-3 py-2 mx-2 fw-bolder fs-5" aria-current="page" href="#">Trainers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  px-3 py-2 mx-2 fw-bolder fs-5" aria-current="page" href="#">Sessions</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  px-3 py-2 mx-2 fw-bolder fs-5" aria-current="page" href="#">Plans</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  px-3 py-2 mx-2 fw-bolder fs-5" aria-current="page" href="#">Memberships</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  px-3 py-2 mx-2 fw-bolder fs-5" aria-current="page" href="#">Sessions Schedule</a>
-                        </li>
-                        <li class="nav-item">
-                            <form asp-action="Logout" asp-controller="Account" method="post" class="d-inline">
-                                <button type="submit"
-                                        class="btn btn-link nav-link px-3 py-2 mx-2 fw-bolder fs-5 text-black-alternative">
-                                    Logout
-                                </button>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+﻿@model AnalyticsViewModel
+  
             <div class="row">
                 <div class="col-md-6 col-lg-7 col-12">
                     <div class="info mt-4">
@@ -88,24 +18,24 @@
                                 capable of!
                             </p>
                         </header>
-
+                        @* Analytics *@
                         <div class="stats-bar">
                             <div class="row g-0">
                                 <div class="col-4">
                                     <div class="stat">
-                                        <span class="fw-bolder fs-5 d-block mb-1">100</span>
+                                        <span class="fw-bolder fs-5 d-block mb-1">@Model.TotalMembers</span>
                                         <h3 class="fs-5 fw-normal">Total Members</h3>
                                     </div>
                                 </div>
                                 <div class="col-4">
                                     <div class="stat">
-                                        <span class="fw-bolder fs-5 d-block mb-1">85</span>
+                            <span class="fw-bolder fs-5 d-block mb-1">@Model.ActiveMembers</span>
                                         <h3 class="fs-5 fw-normal">Active Members</h3>
                                     </div>
                                 </div>
                                 <div class="col-4">
                                     <div class="stat">
-                                        <span class="fw-bolder fs-5 d-block mb-1">20</span>
+                            <span class="fw-bolder fs-5 d-block mb-1">@Model.TotalTrainers</span>
                                         <h3 class="fs-5 fw-normal">Trainers</h3>
                                     </div>
                                 </div>
@@ -113,19 +43,19 @@
                             <div class="row g-0">
                                 <div class="col-4">
                                     <div class="stat">
-                                        <span class="fw-bolder fs-5 d-block mb-1">3</span>
+                            <span class="fw-bolder fs-5 d-block mb-1">@Model.UpcomingSessions</span>
                                         <h3 class="fs-5 fw-normal">Upcoming Sessions</h3>
                                     </div>
                                 </div>
                                 <div class="col-4">
                                     <div class="stat">
-                                        <span class="fw-bolder fs-5 d-block mb-1">5</span>
+                            <span class="fw-bolder fs-5 d-block mb-1">@Model.OngoingSessions</span>
                                         <h3 class="fs-5 fw-normal">Ongoing Sessions</h3>
                                     </div>
                                 </div>
                                 <div class="col-4">
                                     <div class="stat">
-                                        <span class="fw-bolder fs-5 d-block mb-1">20</span>
+                            <span class="fw-bolder fs-5 d-block mb-1">@Model.CompletedSessions</span>
                                         <h3 class="fs-5 fw-normal">Completed Sessions</h3>
                                     </div>
                                 </div>
@@ -472,9 +402,3 @@
                     </div>
                 </div>
             </footer>
-
-        </main>
-    </div>
-</body>
-
-</html>
