--- a/GymSystem/Views/_ViewImports.cshtml
+++ b/GymSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using GymSystem
 @using GymSystem.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using GymSystemBLL.ViewModels
+@using GymSystemDAL.Entities.Enums
