--- a/GymSystem/Views/Trainer/TrainerEdit.cshtml
+++ b/GymSystem/Views/Trainer/TrainerEdit.cshtml
@@ -12,9 +12,9 @@
                 <div class="card-body p-4">
                     <div class="mb-4 pb-3 border-bottom">
                         <small class="text-muted d-block mb-1">Editing Profile For</small>
-                        <h4 class="mb-0 text-black">Mohamed</h4>
+                        <h4 class="mb-0 text-black">@Model.Name</h4>
                     </div>
-                    <form asp-action="Edit" method="post">
+                    <form asp-controller="Trainer" asp-action="TrainerEdit" method="post">
                         <input hidden readonly asp-for="Name" />
                     
                         <!-- Personal Information -->
@@ -33,19 +33,20 @@
 
                             <div class="col-md-6">
                                 <label class="form-label">Phone</label>
-                                <input name="Phone" type="text" class="form-control" />
+                                <input asp-for="Phone" class="form-control" />
+                                <span asp-validation-for="Phone" class="text-danger"></span>
                             </div>
                             <div class="col-md-6">
-                                <label class="form-label">BuildingNumber</label>
-                                <input name="BuildingNumber" type="text" class="form-control" />
+                                <input asp-for="BuildingNumber" class="form-control" />
+                                <span asp-validation-for="BuildingNumber" class="text-danger"></span>
                             </div>
                             <div class="col-md-6">
-                                <label class="form-label">Street</label>
-                                <input name="Street" type="text" class="form-control" />
+                                <input asp-for="Street" class="form-control" />
+                                <span asp-validation-for="Street" class="text-danger"></span>
                             </div>
                             <div class="col-md-6">
-                                <label class="form-label">City</label>
-                                <input name="City" type="text" class="form-control" />
+                                <input asp-for="City" class="form-control" />
+                                <span asp-validation-for="City" class="text-danger"></span>
                             </div>
                         </div>
 
@@ -61,36 +62,29 @@
                                     Specializations <span class="text-danger">*</span>
                                 </label>
 
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="Specialties"
-                                           value="GeneralFitness" />
-                                    <label class="form-check-label">GeneralFitness</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="Specialties"
-                                           value="Yoga" />
-                                    <label class="form-check-label">Yoga</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="Specialties"
-                                           value="Boxing" />
-                                    <label class="form-check-label">Boxing</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="Specialties"
-                                           value="CrossFit" />
-                                    <label class="form-check-label">CrossFit</label>
-                                </div>
+                                @foreach (var item in Html.GetEnumSelectList<Specialites>())
+                                {
+                                    <div class="form-check">
+                                        <input class="form-check-input"
+                                               type="radio"
+                                               asp-for="Specialization"
+                                               value="@item.Value" />
+                                        <label class="form-check-label">@item.Text</label>
+                                    </div>
+                                }
+
                             </div>
                         </div>
 
                         <div class="d-flex justify-content-between mt-4 pt-3 border-top">
-                            <a asp-action="Index" class="btn btn-outline">
+                            <a asp-controller="Trainer" asp-action="Index" class="btn btn-outline">
                                 <i class="bi bi-arrow-left me-1"></i>Cancel
                             </a>
+
                             <button type="submit" class="btn btn-fill">
                                 <i class="bi bi-check-lg me-1"></i>Update Trainer
                             </button>
+
                         </div>
                     </form>
                 </div>
@@ -98,3 +92,9 @@
         </div>
     </div>
 </div>
+
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
