--- a/GymSystem/Views/Member/MemberDetails.cshtml
+++ b/GymSystem/Views/Member/MemberDetails.cshtml
@@ -4,8 +4,17 @@
         <div class="col-md-6">
             <div class="card card-details border-0 p-2 shadow">
                 <div class="text-center mt-3">
-                    <img src="~/images/@Model.Photo" alt="MemberName" class="rounded-circle"
-                         style="width: 120px; height: 120px; object-fit: cover; border: 3px solid #fff; margin-top: -60px;" />
+                    @if(string.IsNullOrEmpty(Model.Photo))
+                    {
+                        <img src="~/images/users.jpg" alt="MemberName" class="rounded-circle"
+                        style="width: 120px; height: 120px; object-fit: cover; border: 3px solid #fff; margin-top: -60px;" />
+                    }else
+                    {
+                        <img src="~/images/members/@Model.Photo" alt="MemberName" class="rounded-circle"
+                             style="width: 120px; height: 120px; object-fit: cover; border: 3px solid #fff; margin-top: -60px;" />
+                    }
+
+                   
                 </div>
                 <div class="card-body text-center">
                     <h2 class="mb-1 text-primary-color">@Model.Name</h2>
